// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DetailInfo Component Should match snapshots 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal"
          role="dialog"
          style="width: 550px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                任务详情
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  系统异常
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务类型
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                spark
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                数据源
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                dataName(1)
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                引擎版本
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                1.12
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-01-01 00:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-01-01 00:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                描述
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                test
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 2`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                函数名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <code>
                  test
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                类名
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                className
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                SQL
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                sqlText
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                用途
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                purpose
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                命令格式
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <code>
                  commandFormate
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                参数说明
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                paramDesc
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-01-01 00:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                最后修改
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-01-01 00:00:00
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 3`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                资源名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                资源描述
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                resourceDesc
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                存储路径
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <code
                  class="cursor-pointer"
                >
                  url
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                userName 于2022-01-01 00:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-01-01 00:00:00
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 4`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                mysql_test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                类型
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                MySQL
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                描述
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                --
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                连接信息
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <div>
                  <p
                    style="display: flex; line-height: 1.5; margin-bottom: 0px;"
                  >
                    <span
                      style="color: rgb(153, 153, 153); flex-shrink: 0;"
                    >
                      jdbcUrl：
                    </span>
                    <span
                      class="link-json"
                      title="jdbc:mysql://"
                    >
                      jdbc:mysql://
                    </span>
                  </p>
                  <p
                    style="display: flex; line-height: 1.5; margin-bottom: 0px;"
                  >
                    <span
                      style="color: rgb(153, 153, 153); flex-shrink: 0;"
                    >
                      用户名：
                    </span>
                    <span
                      class="link-json"
                      title="dtstack"
                    >
                      dtstack
                    </span>
                  </p>
                </div>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                连接状态
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-success"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    正常
                  </span>
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                2022-11-02 03:00:42
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 5`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                实例ID
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <code
                  class="cursor-pointer"
                >
                  jobId
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务类型
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                spark
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                状态
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <span>
                  <div
                    class="dtc-circle-default dtc-circle-fail"
                  />
                    数据同步
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                调度周期
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                <span>
                  分钟任务
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                计划时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              <span>
                1667358042000
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
